--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Build  
       run: npm run build --if-present
 
-    - name: Run Unit Tests & Generate Coverage Report
-      run: npm test --coverage
+    - name: Generate Coverage Report
+      run: npx jest --coverage
 
     - name: Upload results to Codecov
       uses: codecov/codecov-action@v4
