--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,9 @@ jobs:
     - name: Build  
       run: npm run build --if-present
 
+    - name: Run unit tests
+      run: npm test
+
     - name: Generate Coverage Report
       run: npx jest --coverage
 
