--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ase-summ2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rmdtech.github.io/currency-converter",
+  "homepage": "https://rmdtech.github.io/ASE-Summ2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
